# oop-practices

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md
Pr1/01 Struct/: CMakeLists.txt  MyStruct.cpp  MyStruct.h  Test.h  main.cpp
Pr1/02 Memory/: CMakeLists.txt  Memory.cpp  Memory.h  main.cpp
Pr1/03 Constructor/: CMakeLists.txt  CMakePresets.json  Complex.h  main.cpp
Pr1/04 Vector/: CMakeLists.txt  Vector.h  Vector10.cpp  Vector_01.cpp  Vector_01.h  Vector_10.h  main.cpp
Pr1/This/: CMakeLists.txt  main.cpp
Pr10/00 Shape/: 00 Shape.sln  00 Shape.vcxproj  A.h  CLASS_DIAGRAM.md  CMakeLists.txt  ClassDiagram.cd  Container.h  Shape.h  main.cpp
Pr10/01 IAccount/: Account.h  Account.sln  Account.vcxproj  CLASS_DIAGRAM.md  CMakeLists.txt  main.cpp
Pr10/1.Stack/: Array.h  Bounded.h  CLASS_DIAGRAM.md  CMakeLists.txt  ClassDiagram11.cd  Derived.h  Stack.h  StackOnList.h  TemplateSample.vcxproj  main.cpp
Pr10/2.PeekBacklStack/: Array.h  Bounded.h  CLASS_DIAGRAM.md  CMakeLists.txt  ClassDiagram.cd  Derived.h  Peekback.h  Stack.h  StackOnList.h  TemplateSample.vcxproj  main.cpp
Pr11/01 InheritedStack/: Array.h  ArrayStack.h  CLASS_DIAGRAM.md  CMakeLists.txt  ClassDiagram.cd  InheritedStack.vcxproj  ListStack.h  Stack.h  main.cpp
Pr11/02 AggregatedStack/: Array.h  ArrayStack.h  CLASS_DIAGRAM.md  CMakeLists.txt  ClassDiagram.cd  ListStack.h  Stack.h  main.cpp
Pr12/01 ListIterator/: CLASS_DIAGRAM.md  CMakeLists.txt  ClassDiagram1.cd  List.h  ListIterator.vcxproj  main.cpp
Pr12/02 SimpleIterator/: Array.h  CLASS_DIAGRAM.md  CMakeLists.txt  Concept.h  Iterator.h  (+4 more)
Pr3/04 Module/: CMakeLists.txt  CMakePresets.json  main.cpp  math.cppm
Pr3/05 ComplexModule/: CMakeLists.txt  CMakePresets.json  Complex.cpp  Complex.ixx  main.cpp
Pr3/06 OfficeBigger/: CMakeLists.txt  Office.cpp  Office.ixx  main.cpp
Pr3/07 OfficePartition/: CMakeLists.txt  main.cpp  office.cpp  office.ixx  office_hr.cpp  office_hr.ixx
Pr7/: CMakeLists.txt  Project1.sln  Project1.vcxproj  main.cpp  results.txt
(+404 files in other folders)
